examples/test/testpolicy19698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19698
  namespace: namespace441
spec:
  podSelector:
    matchLabels:
      key39: value48
      key20: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value6
          key24: value42
      podSelector:
        matchLabels:
          key9: value30
          key4: value6
